# Vaelix

./: .flutter-plugins-dependencies  .gitattributes  .gitignore  .metadata  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION-ROADMAP.md  INITIAL-SETUP-COMMIT.md  LICENSE  LICENSE-VCL1.0  README.md  README_ANDROID.md  TODO.md  VAELIX_SUPER_HIGH_END_IM  Vaelix.pro  WPE  WPE_EFL_MIGRATION_TODO.md  build.bat  build.sh  build_super_high_end_demo.sh  example.html  log.txt  plan.md  plan.txt  pubspec.yaml  setup.fish  setup_env.sh  style.css  styles.css  super_enhancement_implementation.md  super_enhancement_plan.md
.github/workflows/: ci.yml
Vaelix/: Cargo.toml
Vaelix/src/: main.rs
Vaelix/src/networking/: mod.rs
Vaelix/src/renderer/: css_parser.rs  html_parser.rs  layout.rs  mod.rs  render.rs
Vaelix/src/storage/: mod.rs
Vaelix/src/ui/: mod.rs
Vaelix/tests/: test_main.rs
android/: gradle.properties
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
apps/sieben-elixir/: mix.exs
apps/sieben-elixir/_build/prod/lib/configparser_ex/.mix/: compile.elixir
apps/sieben-elixir/lib/sieben/: control.pb.ex  plugin_api.pb.ex  ui_events.pb.ex
apps/sieben-native/: CMakeLists.txt
apps/sieben-native/include/: control.grpc.pb.h  plugin_api.pb.h  ui_events.pb.h
apps/sieben-native/src/: control.grpc.pb.cc  main.cpp  plugin_api.grpc.pb.cc  ui_events.grpc.pb.cc  wayland_handler.cpp  wayland_handler.h
apps/sieben-racket/: info.rkt
apps/sieben-ui/: CMakeLists.txt
assets/adblock/: hosts.txt
cef_artifacts/: Doxyfile  MODULE.bazel  README.txt
cef_artifacts/Debug/: chrome-sandbox  libvulkan.so.1
cef_artifacts/Release/: chrome-sandbox  libvulkan.so.1
cef_artifacts/Resources/: chrome_100_percent.pak  chrome_200_percent.pak
cef_artifacts/Resources/locales/: af.pak  am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  (+15 more)
cef_artifacts/bazel/: variables.bzl
cef_artifacts/cef_binary_142.0.15+g6dfdb28+chromium-142.0.7444.176_linux64/Debug/: chrome-sandbox  libvulkan.so.1
cef_artifacts/cef_binary_142.0.15+g6dfdb28+chromium-142.0.7444.176_linux64/Release/: chrome-sandbox  libvulkan.so.1
cef_artifacts/cef_binary_142.0.15+g6dfdb28+chromium-142.0.7444.176_linux64/Resources/locales/: af.pak  ar.pak  cs.pak  da.pak  el.pak  en-GB.pak  es-419.pak  es.pak  fr.pak  gu.pak  hi.pak  id.pak  it.pak  ja.pak  lt.pak  nb.pak  pl.pak  pt-BR.pak  ro.pak  ru.pak  sk.pak  te.pak  th.pak  uk.pak  ur.pak  vi.pak  zh-CN.pak
cef_artifacts/cef_binary_142.0.15+g6dfdb28+chromium-142.0.7444.176_linux64/include/: cef_pack_strings.h
cef_artifacts/include/: cef_api_versions.h  cef_color_ids.h  cef_pack_resources.h  cef_pack_strings.h  cef_version.h
cef_artifacts/libcef_dll/cpptoc/: libcef_dll
docs/: API.md  BUILD.md  CONTRIBUTING.md  DEVELOPMENT.md  GETTING_STARTED.md  IPC_INTEGRATION.md  PLUGIN-API.md  README.md  SECURITY.md  THEMING.md  api.md  architecture.md  build.md  development_checklist.md  standards.md  usage.md
infra/scripts/: build-all.sh  build-proto.sh  dev-run.sh
lib/: main.dart
lib/core/: core.dart
lib/core/ipc/: ipc_manager.dart
lib/core/privacy/: shields_provider.dart
lib/core/settings/: ipc_settings_provider.dart
lib/core/theme/: app_theme.dart  theme_provider.dart
lib/privacy_engine/: filter_list.dart  privacy_engine.dart
lib/ui_shell/: ui_shell.dart
lib/ui_shell/screens/: browser_screen.dart  downloads_screen.dart  search_screen.dart  settings_screen.dart
lib/ui_shell/widgets/: floating_bottom_bar.dart  shields_popup.dart
lib/ui_shell/widgets/navigation_controls/: navigation_controls_widget.dart
lib/ui_shell/widgets/tab_bar/: tab_bar_widget.dart
lib/webview_manager/: webview_controller.dart  webview_manager.dart  webview_widget.dart
lib/webview_manager/models/: tab_model.dart
libs/proto/: control.proto  plugin_api.proto  ui_events.proto
libs/proto/c++/: control.pb.cc  control.pb.h  plugin_api.grpc.pb.h  plugin_api.pb.cc  ui_events.grpc.pb.h  ui_events.pb.cc
linux/: CMakeLists.txt
linux/runner/: my_application.cc
plans/: ARCHITECTURE.md  CORE_ENGINE_ORCHESTRATION.md  DETAILED_ENGINE_SPECS.md  IMPLEMENTATION_STRATEGY.md  ROADMAP.md  SIGNALING_IMPLEMENTATION.md  SUBSYSTEM_INTERNALS.md  UI_UX_DESIGN.md
profiles/: default.toml
scripts/: check_android_env.fish  detect_workers.fish
services/racket_integration/: vaelix_r
services/vaelix_backend/lib/vaelix_backend/network/vpn_manager.ex</: path
services/vaelix_backend/lib/vaelix_backend/security/: ad_blocker.ex
src/: main.cpp  main.rs
src/Asgard/: main.cpp  mainwindow.cpp  mainwindow.h
src/Yggdrasil/: browserengine.cpp  browserengine.h  nordicbookmarks.cpp  nordicbookmarks.h  tabwidget.cpp  tabwidget.h
src/ai/: mod.rs
src/core/: async_design.rs  core.ixx  engine.rs  mod.rs  protocols.rs  sandboxing.rs
src/devtools/: mod.rs
src/extensions/: mod.rs
src/ipc/: ipc.ixx  scheduler.ixx
src/network/: mod.rs
src/networking/: mod.rs
src/plugins/: sandbox.rs
src/renderer/: css_parser.rs  html_parser.rs  layout.rs  mod.rs  render.rs
src/security/: firewall.rs
src/storage/: mod.rs
src/ui/: command_palette.rs  mod.rs  tab_memory.rs  tab_snapshot.rs
src/utils/: mod.rs
test/: ipc_privacy_engine_test.dart  widget_test.dart
tests/: test_main.rs
tiamat-core/: Cargo.toml
tiamat-core/src/: css.rs  dom.rs  html.rs  layout.rs  lib.rs  protocol.rs
vaelix-ext/: Cargo.toml
vaelix-ext/src/: lib.rs
vaelix-law/: Cargo.toml
vaelix-law/src/: lib.rs
vaelix-privacy/: Cargo.toml
vaelix-privacy/src/: lib.rs
vaelix-shell/: Cargo.toml
vaelix-shell/src/: lib.rs
vaelix-ui/: Cargo.toml
vaelix-ui/src/: lib.rs  main.rs
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+422 files in other folders)
